# tts-wrapper

./: .coverage  .gitignore  AGENTS.md  Makefile  PYINSTALLER_GUIDE.md  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  setup.py  setup_template.py  test_microsoft_import.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy-docs.yml  pythonpackage.yml
examples/: .coverage  basic_azure_example.py  credentials.json  demo.py  example.py  load_credentials.py  merged_models.json  output.mps3  requirements.txt  sapi_example.py  set_env_vars.py  streamlit-demo.py  test-avspeech.py  test-avsynth-bytestream.py  test-edgetts.py  test-eleven-pause.py  test-eleven.py  test-espeak.py  test-google-pause-resume.py  test-google-stream.py  test-google.py  test-googleTrans.py  test-googletrans-abstracttts.py  test-googletrans-simple.py  test-googletrans-voice.py  test-macos.py  test-microsoft-abstracttts.py  test-microsoft.py  test-mms.py  test-openai.py  test-pico.py  test-piper.py  test-playht-languages.py  test-playht.py  test-polly.py  test-sapi.py  test-sherpaonnx-2.py  test-sherpaonnx-abstracttts.py  test-sherpaonnx-newmodels.py  test-sherpaonnx.py  (+9 more)
scripts/: install_dependencies.py
tests/: conftest.py  credentials.json  load_credentials.py  test_abstract_tts.py  test_avsynth.py  test_generate_audiofile.py  test_openai.py  test_optional_dependencies.py  test_playback_control.py  test_playht.py  test_speak_streamed_file_saving.py  test_ssml.py  test_ssml_support.py  test_synthesize_method.py  test_tts_engines.py  test_word_callbacks.py
tests/engines/: test_google.py  test_microsoft.py  test_polly.py  test_watson.py
tts_wrapper/: __init__.py  exceptions.py  language_utils.py  preinstall.py  pyinstaller_utils.py  tts.py
tts_wrapper/_pyinstaller/: hook-sounddevice.py  hook-tts_wrapper.py
tts_wrapper/engines/: __init__.py  utils.py
tts_wrapper/engines/avspeech/: SpeechBridge.dylib  SpeechBridge.py  SpeechBridge.swift  __init__.py  avspeech.py  build-lib.sh  client.py  ssml.py  vanilla.py
tts_wrapper/engines/avsynth/: Package.swift  SpeechBridge  SpeechBridge.py  SpeechBridge.swift  __init__.py  avsynth.py  client.py  setup.py  ssml.py
tts_wrapper/engines/deeplearning/: __init__.py  client.py  deeplearning.py  ssml.py
tts_wrapper/engines/edgetts/: Credits.md  __init__.py  _constants.py  _drm.py  _exceptions.py  _typing.py  client.py  edgetts.py  ssml.py
tts_wrapper/engines/elevenlabs/: __init__.py  client.py  elevenlabs.py  ssml.py
tts_wrapper/engines/espeak/: __init__.py  _espeak.py  client.py  espeak.py  ssml.py
tts_wrapper/engines/google/: __init__.py  client.py  google.py  ssml.py
tts_wrapper/engines/googleTrans/: __init__.py  client.py  googleTrans.py  ssml.py
tts_wrapper/engines/googletrans/: __init__.py  client.py  googletrans.py  ssml.py
tts_wrapper/engines/googletranso/: client.py
tts_wrapper/engines/macos/: __init__.py  client.py  macos.py  ssml.py
tts_wrapper/engines/microsoft/: __init__.py  client.py  microsoft.py  ssml.py
tts_wrapper/engines/mms/: __init__.py  client.py  mms.py  ssml.py
tts_wrapper/engines/openai/: __init__.py  client.py  ssml.py
tts_wrapper/engines/pico/: client.py  pico.py
tts_wrapper/engines/piper/: __init__.py  client.py  piper.py  ssml.py
tts_wrapper/engines/playht/: __init__.py  client.py  playht.py  ssml.py
tts_wrapper/engines/polly/: __init__.py  client.py  polly.py  ssml.py
tts_wrapper/engines/sapi/: __init__.py  _sapi4.py  client.py  sapi.py  ssml.py
tts_wrapper/engines/sherpaonnx/: __init__.py  client.py  createindex.py  merged_models.json  publishedmodels.json  sherpaonnx.py  ssml.py
tts_wrapper/engines/systemtts/: __init__.py  client.py  ssml.py  systemtts.py
tts_wrapper/engines/upliftai/: __init__.py  client.py
tts_wrapper/engines/uwp/: __init__.py  client.py  ssml.py  uwp.py
tts_wrapper/engines/watson/: __init__.py  client.py  ssml.py  watson.py
tts_wrapper/engines/witai/: __init__.py  client.py  ssml.py  witai.py
tts_wrapper/ssml/: __init__.py  google.py  ssml_node.py  ssml_root.py
website/: docusaurus.config.js  package.json  sidebars.js
website/.docusaurus/: client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
website/.docusaurus/docusaurus-plugin-content-docs/default/: site-docs-api-overview-md-65d.json  site-docs-developer-adding-engines-md-dba.json  site-docs-developer-contributing-md-3f8.json  site-docs-developer-overview-md-0e8.json  site-docs-developer-releases-md-c56.json  site-docs-engines-avsynth-md-863.json  site-docs-engines-aws-polly-md-fc0.json  site-docs-engines-elevenlabs-md-866.json  site-docs-engines-espeak-md-de8.json  site-docs-engines-google-cloud-md-c04.json  site-docs-engines-googletrans-md-0df.json  site-docs-engines-ibm-watson-md-dde.json  site-docs-engines-microsoft-azure-md-c9c.json  site-docs-engines-overview-md-564.json  site-docs-engines-playht-md-ae4.json  site-docs-engines-sapi-md-149.json  site-docs-engines-sherpaonnx-md-e7a.json  site-docs-engines-witai-md-688.json  site-docs-guides-audio-control-md-7e5.json  site-docs-guides-basic-usage-md-102.json  site-docs-guides-callbacks-md-37e.json  site-docs-guides-ssml-md-6ff.json  site-docs-guides-streaming-md-6ef.json  site-docs-installation-md-3b8.json  site-docs-intro-md-0e3.json  site-docs-quickstart-md-807.json
website/docs/: installation.md  intro.md
website/docs/api/: overview.md
website/docs/developer/: adding-engines.md  contributing.md  overview.md  releases.md
website/docs/engines/: avsynth.md  aws-polly.md  elevenlabs.md  google-cloud.md  googletrans.md  ibm-watson.md  microsoft-azure.md  openai.md  overview.md  playht.md  sapi.md  sherpaonnx.md  witai.md
website/docs/guides/: audio-control.md  basic-usage.md  callbacks.md  silent-synthesis.md  ssml.md  streaming.md  voices.md
website/src/components/EngineComparison/: index.js  styles.module.css
website/src/components/HomepageFeatures/: index.js
website/src/css/: custom.css
website/src/pages/: index.js  index.module.css
(+8 files in other folders)
