[tool.poetry]
name = "py3-tts-wrapper"
version = "0.9.0"
description = "TTS-Wrapper makes it easier to use text-to-speech APIs by providing a unified and easy-to-use interface."
authors = ["Giulio Bottari <giuliobottari@gmail.com>","Will Wade <willwade@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/willwade/tts-wrapper"
documentation = "https://github.com/willwade/tts-wrapper"
keywords = [ "tts", "text-to-speech", "speech synthesis", "polly", "sapi", "mms", "gTTS", "witai", "elevenlabs" ]
packages = [{include = "py3_tts_wrapper"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/willwade/tts-wrapper/issues"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = { version = "^2.31.0", optional = true }
numpy = { version = "^2.0.1",  optional = true }
boto3 = {version = "^1.34.137", optional = true}
ibm-watson = {version = "^8.1.0", optional = true}
google-cloud-texttospeech = {version = "^2.12.0", optional = true}
py3-tts = {version = "^3.5", optional = true}
pyaudio = {version = "^0.2.11", optional = false}
azure-cognitiveservices-speech = {version = "^1.15.0",  optional = true}
winrt-runtime = { version = "^2.0.1", markers = "sys_platform == 'win32'", optional = true }
piper-tts = { version = "^1.2.0", optional = true}
sherpa-onnx ={ version = "^1.10.17", optional = true }
gTTS={ version = "^2.5.2", optional = true }
pydub={ version = "^0.25.1", optional = true }

[tool.poetry.extras]
google = ["google-cloud-texttospeech"]
watson = ["ibm-watson", "websocket", "requests"]
polly = ["boto3"]
Microsoft = ["azure.cognitiveservices.speech"]
elevenlabs = ["requests","numpy"]
witai = ["requests"]
sapi = ["py3-tts"]
uwp = ["winrt_windows.media.speechsynthesis","winrt_windows.storage.streams","winrt_windows.foundationtime"]
piper =["piper-tts"]
sherpaonnx = ["sherpa-onnx", "requests"]
googletrans = ["gTTS","pydub"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-mock = "^3.5.1"
black = {version = "^22.1.0", allow-prereleases = true}
types-requests = "^2.27.31"
mypy = "^0.971"
types-boto3 = "^1.0.2"
pytest-cov = "^3.0.0"
filetype = "^1.0.13"
wheel = "^0.43.0"
setuptools = "^71.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
postinstall = "scripts.install_dependencies:main"

[tool.poetry-dynamic-versioning]
enable = true
source = "tag"